# RAG_Optimizer

./: .gitignore  README.md  example.env  main.py  pyproject.toml  requirements.txt
configs/: evaluation_settings.yaml  model_paths.yaml  search_space.yaml
data/hotpotqa/: case1_eval_dataset.csv  case2_query_doc_dataset.csv  reference_corpus.jsonl
outputs/case1/: README.md  best_config.json  param_importance.json  per_query_diagnostics.csv  run_summary.csv  trial_events.jsonl
outputs/case1/answer_examples/: C1Q001.json  C1Q002.json  C1Q003.json  C1Q004.json  C1Q005.json  C1Q006.json  C1Q007.json  C1Q008.json  C1Q009.json  C1Q010.json  C1Q011.json  C1Q012.json  C1Q013.json  C1Q014.json  C1Q015.json
outputs/case1/retrieval_examples/: C1Q001.json  C1Q002.json  C1Q003.json  C1Q004.json  C1Q005.json  C1Q006.json  C1Q007.json  C1Q008.json  C1Q009.json  C1Q010.json  C1Q011.json  C1Q012.json  C1Q013.json  C1Q014.json  C1Q015.json
outputs/case2/: README.md  best_config.json  param_importance.json  per_query_diagnostics.csv  run_summary.csv  trial_events.jsonl
outputs/case2/answer_examples/: C2Q001.json  C2Q002.json  C2Q003.json  C2Q004.json  C2Q005.json  (+10 more)
scripts/: prepare_dataset.py  run_optimization.py
src/core/: cache_manager.py  experiment_tracker.py
src/evaluation/: base.py  evaluators.py  metrics.py
src/pipelines/: base.py  components.py  dspy_modules.py  factory.py
src/utils/: data_loader.py  dspy_model_loader.py  hf_model_downloader.py  local_model_registry.py  model_download_cli.py
tests/: test_formal_mode_guards.py  test_selection_and_tracking.py
(+15 files in other folders)
